--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -121,30 +121,35 @@ jobs:
     needs: [build-macos, build-windows]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
+    permissions:
+      contents: write
     steps:
       - name: Download macOS artifact
         uses: actions/download-artifact@v4
         with:
           name: LCMS-Analysis-macOS
-          
+
       - name: Download Windows artifact
         uses: actions/download-artifact@v4
         with:
           name: LCMS-Analysis-Windows
-          
+
+      - name: List files
+        run: ls -la
+
       - name: Create Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           files: |
             LCMS-Analysis-macOS.zip
             LCMS-Analysis-Windows.zip
           body: |
             ## LC-MS Analysis Desktop App
-            
+
             Download the ZIP for your platform:
             - **macOS**: LCMS-Analysis-macOS.zip
             - **Windows**: LCMS-Analysis-Windows.zip
-            
+
             ### Installation
             1. Extract the ZIP file
             2. Run `LCMS-Analysis` (macOS) or `LCMS-Analysis.exe` (Windows)
